--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "chart.js": "^3.8.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
@@ -36,6 +37,7 @@
     ]
   },
   "devDependencies": {
-    "@faker-js/faker": "^7.1.0"
+    "@faker-js/faker": "^7.1.0",
+    "react-chartjs-2": "^4.1.0"
   }
 }
